objects/User.object
<CustomObject>
    <fields>
        <fullName>Additional_User_Permissions__c</fullName>
        <description>Allows permission for additional functionality which are based on User and not by profile.
1)AccountCreateByTerritory: New SBC functionality which allows SBC based on Geo Rules
2)Enable EndUser ACCTCreation : Can Create End-User accounts
3)Enable Lead Conversion : Can Convert leads
4)Enable PDR ACCTCreation : Can Create End-User Account during CCW deal conversion
5)Request Resource : Allows AMs to access SE functionality
6)SE User : Allows SEs to access SE Functionality
7)2028 Visibility:Users that will be refreshed by 2028 black box process
8)NBM Approver : User can set status field of NBM records to 'Screen 3' Approval status</description>
        <label>Additional User Permissions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2028 Visibility</fullName>
                </value>
                <value>
                    <fullName>AccountCreateByTerritory</fullName>
                </value>
                <value>
                    <fullName>AcquisitionUser</fullName>
                </value>
                <value>
                    <fullName>Activate Sales Account View</fullName>
                </value>
                <value>
                    <fullName>CCE Enabled</fullName>
                </value>
                <value>
                    <fullName>DSEC360</fullName>
                </value>
                <value>
                    <fullName>DSEC360SAV</fullName>
                </value>
                <value>
                    <fullName>DSEContactIntelligence</fullName>
                </value>
                <value>
                    <fullName>DSECRinSFDC</fullName>
                </value>
                <value>
                    <fullName>DSEFA</fullName>
                </value>
                <value>
                    <fullName>DSEGA</fullName>
                </value>
                <value>
                    <fullName>DSENotification</fullName>
                </value>
                <value>
                    <fullName>DSESWSS</fullName>
                </value>
                <value>
                    <fullName>DSETAC</fullName>
                </value>
                <value>
                    <fullName>Einstein Opportunities</fullName>
                </value>
                <value>
                    <fullName>Enable_ePSS</fullName>
                </value>
                <value>
                    <fullName>Enable_VSS</fullName>
                </value>
                <value>
                    <fullName>Enable EndUser ACCTCreation</fullName>
                </value>
                <value>
                    <fullName>Enable Lead Conversion</fullName>
                </value>
                <value>
                    <fullName>Enable PDR ACCTCreation</fullName>
                </value>
                <value>
                    <fullName>Enable Target Prospect Creation</fullName>
                </value>
                <value>
                    <fullName>GSPO_BDM</fullName>
                </value>
                <value>
                    <fullName>GSSO HD Forecast User</fullName>
                </value>
                <value>
                    <fullName>MCP Prospect Engage</fullName>
                </value>
                <value>
                    <fullName>MCP Prospect Profiler</fullName>
                </value>
                <value>
                    <fullName>NBM Approver</fullName>
                </value>
                <value>
                    <fullName>NextGen Forecasting Pilot User</fullName>
                </value>
                <value>
                    <fullName>QIJanACVPilotUser</fullName>
                </value>
                <value>
                    <fullName>RAE SEP Enabled</fullName>
                </value>
                <value>
                    <fullName>Request Resource</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Announcement_Count__c</fullName>
        <label>Announcement Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Announcement_ID__c</fullName>
        <label>Announcement ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BA_Territories__c</fullName>
        <description>Forecasting Positions / Territories for PSS Workspace</description>
        <label>BA Territories</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CASL_Acknowledgement__c</fullName>
        <description>Eloqua Feb Release: To capture Last CASL Acknowledgment Date</description>
        <label>CASL Acknowledgement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUCMServer__c</fullName>
        <label>CUCMServer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Position__c</fullName>
        <description>This field will store the default forecasting position for the user and when an opportunity is reassigned to this user, the opportunity Position will be defaulted to this one.</description>
        <label>Default Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_ID__c</fullName>
        <label>Department ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <label>Deployment No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_ID__c</fullName>
        <label>Division ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Disable__c</fullName>
        <description>Will be set to Yes to flag the user not to be disabled by User Access Automation Process</description>
        <label>Do Not Disable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dummy_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to Identify whether the Userid is a Dummy user and is excluded for CTT Ownership Assignment</description>
        <label>Dummy User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EA_Access_Override__c</fullName>
        <label>EA Access Override</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Einstein Opportunities</fullName>
                </value>
                <value>
                    <fullName>Broadsoft</fullName>
                </value>
                <value>
                    <fullName>Meraki</fullName>
                </value>
                <value>
                    <fullName>Level 1 - Americas</fullName>
                </value>
                <value>
                    <fullName>Level 1 - APJC__</fullName>
                </value>
                <value>
                    <fullName>Level 1 - EMEAR-REGION</fullName>
                </value>
                <value>
                    <fullName>Level 2 - GREATER_CHINA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - JAPAN__</fullName>
                </value>
                <value>
                    <fullName>Level 2 - ASEAN_AREA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - ANZ AREA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - INDIA_AREA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - GSP APJ</fullName>
                </value>
                <value>
                    <fullName>Level 2 - ROK_AREA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - US COMMERCIAL</fullName>
                </value>
                <value>
                    <fullName>Level 2 - US PS Market Segment</fullName>
                </value>
                <value>
                    <fullName>Level 2 - LATIN AMERICA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - GLOBAL ENTERPRISE SEGMENT</fullName>
                </value>
                <value>
                    <fullName>Level 2 - GSP_AMERICAS</fullName>
                </value>
                <value>
                    <fullName>Level 2 - CANADA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR-NORTH</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR_GERMANY</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR_MEA</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR-UKI</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR-SOUTH</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR-GSP</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR_UNALLOCATED</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR-CENTRAL</fullName>
                </value>
                <value>
                    <fullName>Level 2 - APJ_SP</fullName>
                </value>
                <value>
                    <fullName>Level 2 - AMERICAS_SP</fullName>
                </value>
                <value>
                    <fullName>Level 2 - EMEAR_SP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <description>This field shows Employee Type of the user</description>
        <inlineHelpText>Please contact GSTS Support Group to change value of this field</inlineHelpText>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Non-Cisco External</fullName>
                </value>
                <value>
                    <fullName>Non-Cisco Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCS_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GCS_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <inlineHelpText>Please contact GSTS Support to Edit this field</inlineHelpText>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>AP J</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
                <value>
                    <fullName>GSP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>For Dashboard Reporting Purposes</description>
        <formula>Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Assignment__c</fullName>
        <label>Hierarchy_Assignment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TH</fullName>
                    <default>true</default>
                    <label>TH</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ICM__c</fullName>
        <description>ICM Phase 1 release . This Field determines which all profiles have access to the Competitor Technology Field on PUI. NOT to be Edited</description>
        <formula>"False"</formula>
        <label>zzICM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IgnoreCaseRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Providing solution to keep the User's name in preferred CASE</description>
        <inlineHelpText>Please check this box to keep the "User Name" CASE as preferred.</inlineHelpText>
        <label>Ignore Case Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_PSS__c</fullName>
        <description>Used in reports/dashboards to group by ePSS flag.</description>
        <formula>IF ( INCLUDES( Additional_User_Permissions__c, 'Enable_ePSS'), 'Yes', 'No')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PSS User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SE_User__c</fullName>
        <formula>IF ( INCLUDES( Additional_User_Permissions__c, 'SE User'), True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is SE User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JabberUserID__c</fullName>
        <label>JabberUserID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jabber_Password__c</fullName>
        <label>Jabber Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LnP_TC_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LnP T&amp;C Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LnP_TC_Reset_Date__c</fullName>
        <label>LnP T&amp;C Reset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LnP_T_C_Acepted_Date__c</fullName>
        <label>LnP T&amp;C Acepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Geography__c</fullName>
        <description>Used to filter reports to the logged in user's Geography</description>
        <formula>IF( TEXT($User.Geography__c) = TEXT(Geography__c),'True','False')</formula>
        <label>Logged-In User Geography</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User_Sub_Region__c</fullName>
        <description>Used to filter reports to the logged in user's Sub Region</description>
        <formula>IF( TEXT($User.Sub_Theatre__c) = TEXT(Sub_Theatre__c),'True','False')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged-In User Sub Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <description>Used to filter reports to the logged in user.</description>
        <formula>IF( $User.Username = Username ,'True','False')</formula>
        <label>Logged-In User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email_Address__c</fullName>
        <label>Reporting Manager Level 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Marketing_Call_Center__c</fullName>
        <label>Marketing Call Center</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Convergys Manila - Global</fullName>
                </value>
                <value>
                    <fullName>Convergys Manila - ASIA</fullName>
                </value>
                <value>
                    <fullName>Convergys Suzhou China</fullName>
                </value>
                <value>
                    <fullName>Sellbytel Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>Concentrix Costa Rica</fullName>
                </value>
                <value>
                    <fullName>Sellbytel Korea</fullName>
                </value>
                <value>
                    <fullName>Inhouse Korea</fullName>
                </value>
                <value>
                    <fullName>Inhouse Japan</fullName>
                </value>
                <value>
                    <fullName>Sellbytel Sydney Australia</fullName>
                </value>
                <value>
                    <fullName>Inhouse Indonesia</fullName>
                </value>
                <value>
                    <fullName>Convergys India</fullName>
                </value>
                <value>
                    <fullName>Concentrix Debrecen Hungary</fullName>
                </value>
                <value>
                    <fullName>Concentrix Belfast Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Raya Cairo Egypt</fullName>
                </value>
                <value>
                    <fullName>Sellbytel Moscow Russia</fullName>
                </value>
                <value>
                    <fullName>Sellbytel Lisbon Portugal</fullName>
                </value>
                <value>
                    <fullName>Alea Canada</fullName>
                </value>
                <value>
                    <fullName>eCoast New Hampshire</fullName>
                </value>
                <value>
                    <fullName>Cisco RTP</fullName>
                </value>
                <value>
                    <fullName>Convergys Appleton WI</fullName>
                </value>
                <value>
                    <fullName>Convergys Newcastle UK</fullName>
                </value>
                <value>
                    <fullName>MRP</fullName>
                </value>
                <value>
                    <fullName>Concentrix Sofia Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Raya Warsaw Poland</fullName>
                </value>
                <value>
                    <fullName>WebEx IS</fullName>
                </value>
                <value>
                    <fullName>DCR EMEAR</fullName>
                </value>
                <value>
                    <fullName>DCR Brazil</fullName>
                </value>
                <value>
                    <fullName>DCR US</fullName>
                </value>
                <value>
                    <fullName>GVS Nashville</fullName>
                </value>
                <value>
                    <fullName>N3 Atlanta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NGCC_Outbound_SDR_only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only applicable to NGCC SDR Outbound agents using the Cisco_NGCC profile.</description>
        <label>Outbound SDR Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification_Entity__c</fullName>
        <label>Notification Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Opportunity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Platform__c</fullName>
        <label>Notification Platform</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Notification_Platform</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notification_Preference__c</fullName>
        <label>Notification Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily Digest</fullName>
                    <default>true</default>
                    <label>Daily Digest</label>
                </value>
                <value>
                    <fullName>Real Time</fullName>
                    <isActive>false</isActive>
                    <label>Real Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_End_Time__c</fullName>
        <description>Stores the OOO end time</description>
        <label>Out Of Office End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Message__c</fullName>
        <defaultValue>"I am OOO, with limited access to email. Please expect delay in my response."</defaultValue>
        <description>Stores the OOO message</description>
        <label>Out Of Office Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office_Start_Time__c</fullName>
        <description>Stores the OOO start time</description>
        <label>Out Of Office Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PDP_User_Role__c</fullName>
        <description>This field is used in determining the role of PDP User.</description>
        <label>PDP User Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Regional Lead</fullName>
                </value>
                <value>
                    <fullName>CCO</fullName>
                </value>
                <value>
                    <fullName>L&amp;O</fullName>
                </value>
                <value>
                    <fullName>SME</fullName>
                </value>
                <value>
                    <fullName>PVT</fullName>
                </value>
                <value>
                    <fullName>Architecture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Partner_Account_Type__c</fullName>
        <formula>TEXT(Contact.Account.Type)</formula>
        <label>Partner Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PoC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_1__c</fullName>
        <label>Forecasting Positions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position_2__c</fullName>
        <label>Position 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quota_Fullfilled__c</fullName>
        <description>Quota Fullfilled</description>
        <label>Quota Fullfilled YTD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegionalManagerCountry__c</fullName>
        <label>RegionalManagerCountry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_IB_Updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal_IB_Updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Emp_ID__c</fullName>
        <label>Reporting Manager Level 1 Employee ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_1_Title__c</fullName>
        <label>Reporting Manager Level 1 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_1_cec__c</fullName>
        <label>Reporting Manager Level 1 cec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_2_Employee_ID__c</fullName>
        <label>Reporting Manager Level 2 Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_2_Title__c</fullName>
        <label>Reporting Manager Level 2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_2_cec__c</fullName>
        <label>Reporting Manager Level 2 cec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_2_email__c</fullName>
        <label>Reporting Manager Level 2 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_3_Employee_ID__c</fullName>
        <label>Reporting Manager Level 3 Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_3_Title__c</fullName>
        <label>Reporting Manager Level 3 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_3_cec__c</fullName>
        <label>Reporting Manager Level 3 cec</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_3_email__c</fullName>
        <label>Reporting Manager Level 3 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_4_Employee_ID__c</fullName>
        <label>Reporting Manager Level 4 Employee ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Level_4_email__c</fullName>
        <label>Reporting Manager Level 4 email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Reporting_Manager_Name__c</fullName>
        <label>Reporting Up Level 1 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Up_Level_1_Manager__c</fullName>
        <label>Reporting Up Level 1 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Up_Level_2_Manager__c</fullName>
        <label>Reporting Up Level 2 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Up_Level_3_Manager__c</fullName>
        <label>Reporting Up Level 3 Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Up_Manager_Chain__c</fullName>
        <description>Concatenated CEC of all Manager Levels</description>
        <label>Reporting Up Manager Chain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SE_Role__c</fullName>
        <description>SE Organization has the need to distinguish between different Roles of SE’s when they are assigned to deals in SFDC.</description>
        <label>SE Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account SE</fullName>
                </value>
                <value>
                    <fullName>Pursuit SE</fullName>
                </value>
                <value>
                    <fullName>Architecture SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SE_SAGE_Role__c</fullName>
        <label>SE SAGE Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Role__c</fullName>
        <description>Sales Role</description>
        <label>Sales Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_API_Session__c</fullName>
        <formula>$Api.Session_ID</formula>
        <label>Salesforce API Session</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shr_Job_Category__c</fullName>
        <description>User Share Job category</description>
        <label>Job Category (SHARE)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Theatre__c</fullName>
        <label>Sub Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Eastern Europe</fullName>
                </value>
                <value>
                    <fullName>Emerging Africa</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>JAPAN</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>Middle East &amp; Africa</fullName>
                </value>
                <value>
                    <fullName>Russia and CIS</fullName>
                </value>
                <value>
                    <fullName>US Commercial</fullName>
                </value>
                <value>
                    <fullName>US Enterprise</fullName>
                </value>
                <value>
                    <fullName>Global 3.0</fullName>
                </value>
                <value>
                    <fullName>US PS Market Segment</fullName>
                </value>
                <value>
                    <fullName>US SP Market Segment</fullName>
                </value>
                <value>
                    <fullName>EMEA-UKI</fullName>
                </value>
                <value>
                    <fullName>EMEA-SOUTH</fullName>
                </value>
                <value>
                    <fullName>EMEA-EMERGING</fullName>
                </value>
                <value>
                    <fullName>GREATER_CHINA</fullName>
                </value>
                <value>
                    <fullName>EMEA-CENTRAL</fullName>
                </value>
                <value>
                    <fullName>ROK_AREA</fullName>
                </value>
                <value>
                    <fullName>EMEA-NORTH</fullName>
                </value>
                <value>
                    <fullName>INDIA_AREA</fullName>
                </value>
                <value>
                    <fullName>JAPAN__</fullName>
                </value>
                <value>
                    <fullName>ASEAN_AREA</fullName>
                </value>
                <value>
                    <fullName>ANZ AREA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Support_Use_Only__c</fullName>
        <description>used for support update</description>
        <label>Support Use Only</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>